WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69960
Hang beneath PluginProcessProxy::createPropertyListFile() when using a thin build
https://bugs.webkit.org/show_bug.cgi?id=69960
Summary
Hang beneath PluginProcessProxy::createPropertyListFile() when using a thin b...
mitz
Reported
2011-10-12 14:02:30 PDT
Hang beneath PluginProcessProxy::createPropertyListFile() when using a thin build
Attachments
Patch
(1.59 KB, patch)
2011-10-12 14:04 PDT
,
mitz
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-10-12 14:04:44 PDT
Created
attachment 110740
[details]
Patch
mitz
Comment 2
2011-10-12 14:34:17 PDT
Fixed in <
http://trac.webkit.org/r97304
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug